Modified Product Table

--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <title>Product list</title>
 </head>
 <body>
-    <table border="2px">
+    <table border="2px" align="center" cellPadding="10px" cellSpacing="0">
         <caption>Product List</caption>
         <thead>
             <tr>
