--- a/student.html
+++ b/student.html
@@ -5,7 +5,7 @@
     <title>Students Records</title>
 </head>
 <body>
-    <table border="2px">
+    <table border="2px" cellpadding="10px" cellspacing="0">
         <caption>Student Records</caption>
         <thead>
             <tr>
