--- a/weatherstation.html
+++ b/weatherstation.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Station</title>
 </head>
-<table border="2px">    
+<table border="2px" cellpadding="10px" cellspacing="0">    
     <caption>Weather Station</caption>
     <thead>
         <tr>
